k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: worker
  namespace: ai-task-platform

spec:
  replicas: 2

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
        - name: worker

          image: bushrakhan9321/ai-task-worker:716d5fe5c0a24a3fa1679b7f564eb24ab27dbe6e
          imagePullPolicy: Always
