k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: ai-task-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: bushrakhan9321/ai-task-frontend:716d5fe5c0a24a3fa1679b7f564eb24ab27dbe6e
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5173

---
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: ai-task-platform

spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 5173
